# wordle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
driver/: CMakeLists.txt
driver/include/: solver.hpp
driver/share/: GenerateResources.cmake  credit.md
driver/src/: driver.cpp  solver.cpp
wordle/: CMakeLists.txt
wordle/include/: wordle.hpp
wordle/src/: wordle.cpp
